[package]
name = "otpshka"
version = "1.0.2"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/otpshka"
description = "OTP library"
keywords = ["otp", "totp", "hotp"]
categories = ["authentication"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies.lhash]
version = "1.0.1"
features = ["sha1", "sha256", "sha512"]

[features]
# Enables std related features like accessing current time.
std = []

[package.metadata.docs.rs]
features = ["std"]
